<resources>
    <string name="app_name">BrewFind</string>
    <string name="brewName">Brew Name</string>
    <string name="street">Street</string>
    <string name="city">City</string>
    <string name="searchPage">Search Page</string>
    <string name="menuPage">Menu Page</string>
    <string name="managePage">Manage Page</string>
    <string name="breweriesnearyou">Breweries Near You</string>
    <string name="user_settings">User Settings</string>
    <string name="location_settings">Location Settings</string>
    <string name="notification">Notification</string>
    <string name="positionNumber">Position Number</string>
    <string name="address">Address</string>
    <string name="webite">Website</string>
    <string name="state">State</string>
    <string name="distance">Distance</string>

</resources>
