<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainFragment">

    <AutoCompleteTextView
        android:id="@+id/actBrewName"
        android:layout_width="@dimen/z"
        android:layout_height="@dimen/xlg"
        android:layout_marginStart="@dimen/xsm"
        android:layout_marginTop="@dimen/sm"
        android:layout_marginEnd="@dimen/xsm"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/brewName"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <AutoCompleteTextView
        android:id="@+id/actStreet"
        android:layout_width="@dimen/z"
        android:layout_height="@dimen/xlg"
        android:layout_marginStart="@dimen/xsm"
        android:layout_marginTop="@dimen/xsm"
        android:layout_marginEnd="@dimen/xsm"
        android:hint="@string/street"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.022"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/actBrewName" />

    <AutoCompleteTextView
        android:id="@+id/actCity"
        android:layout_width="@dimen/xxlg"
        android:layout_height="@dimen/xlg"
        android:layout_marginStart="@dimen/xsm"
        android:layout_marginTop="@dimen/xsm"
        android:hint="@string/city"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/actStreet" />

    <Spinner
        android:id="@+id/spnState"
        android:layout_width="@dimen/xxlg"
        android:layout_height="@dimen/xlg"
        android:layout_marginStart="@dimen/md"
        android:layout_marginTop="@dimen/xsm"
        android:layout_marginEnd="@dimen/xsm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/actCity"
        app:layout_constraintTop_toBottomOf="@+id/actStreet" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/btnSearchPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/searchPage"
            android:src="@android:drawable/ic_menu_search" />

        <ImageButton
            android:id="@+id/btnMenuPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/menuPage"
            android:src="@android:drawable/ic_dialog_dialer" />

        <ImageButton
            android:id="@+id/btnManagePage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/managePage"
            android:src="@android:drawable/ic_menu_manage" />
    </LinearLayout>

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/xsm"
        android:layout_marginTop="@dimen/lg"
        android:layout_marginEnd="@dimen/xsm"
        android:text="@android:string/search_go"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spnState" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/searchRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/xsm"
        android:layout_marginTop="@dimen/lg"
        android:layout_marginEnd="@dimen/xsm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSearch" />

</androidx.constraintlayout.widget.ConstraintLayout>
